// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-icon-button Default 1`] = `
<DocumentFragment>
  <p>
    <button
      aria-label="Menu"
      class="icon-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--menu-20"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-menu-20"
        />
      </svg>
    </button>
  </p>
  <p>
    <a
      aria-label="Settings"
      class="icon-link"
      href="https://ebay.com"
    >
      <svg
        aria-hidden="true"
        class="icon icon--settings-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-settings-16"
        />
      </svg>
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-icon-button Transparent 1`] = `
<DocumentFragment>
  <p>
    <button
      aria-label="Menu"
      class="icon-btn icon-btn--transparent"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--menu-20"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-menu-20"
        />
      </svg>
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-icon-button With Badges 1`] = `
<DocumentFragment>
  <p>
    <button
      aria-label="Menu"
      class="icon-btn icon-btn--badged"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--menu-20"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-menu-20"
        />
      </svg>
      <span
        aria-hidden="true"
        aria-label="new feature available"
        class="badge"
      >
        1
      </span>
    </button>
  </p>
  <p>
    <a
      aria-label="Cart"
      class="icon-link icon-link--badged"
      href="https://ebay.com"
    >
      <svg
        aria-hidden="true"
        class="icon icon--cart-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-cart-16"
        />
      </svg>
      <span
        aria-hidden="true"
        aria-label="3 items in your cart"
        class="badge"
      >
        3
      </span>
    </a>
  </p>
  <p>
    <a
      aria-label="Chat"
      class="icon-link icon-link--badged"
      href="https://ebay.com"
    >
      <svg
        aria-hidden="true"
        class="icon icon--chat-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chat-16"
        />
      </svg>
      <span
        aria-hidden="true"
        aria-label="99 unread messages"
        class="badge"
      >
        99
      </span>
    </a>
  </p>
</DocumentFragment>
`;
